[HBD] Update Cocoa to match removed controls from Plugins Blocked popup.

This CL leaves the xib files alone, but manually removes the unneeded
controls in the .mm file to match the Views version.

The Views code was changed in this CL:
https://codereview.chromium.org/2552343005

BUG=674062

Review-Url: https://codereview.chromium.org/2593743002
Cr-Commit-Position: refs/heads/master@{#440139}

Former-commit-id: 9a463996fbbbde1dbee191d29b28cfa16a4eb0fb